[project]
name = "hierarchical_grouping_adv_gis"
version = "0.0.1"
authors = [
  { name="Panyawat Rattana", email="nanoic_ohm@hotmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"